--- a/frontFarm/src/app/admin/clientes/clientes.component.html
+++ b/frontFarm/src/app/admin/clientes/clientes.component.html
@@ -117,9 +117,24 @@
 
     <!-- Monedero -->
     <ng-container matColumnDef="monedero">
-        <th mat-header-cell *matHeaderCellDef>Monedero</th>
+        <th mat-header-cell *matHeaderCellDef>
+            Monedero
+            <button class="btn-orden" type="button" (click)="toggleMonederoSort()" [disabled]="cargando"
+                matTooltip="Ordenar por monedero">
+                <i class="fas" [ngClass]="{
+           'fa-sort'                 : sortBy !== 'totalMonedero',
+           'fa-sort-amount-down'     : sortBy === 'totalMonedero' && sortDir === 'desc',
+           'fa-sort-amount-up-alt'   : sortBy === 'totalMonedero' && sortDir === 'asc'
+         }"></i>
+            </button>
+
+            <button *ngIf="sortBy === 'totalMonedero'" class="btn-orden limpiar" type="button" (click)="clearSort()"
+                [disabled]="cargando" matTooltip="Quitar orden">
+                <i class="fas fa-times"></i>
+            </button>
+        </th>
         <td mat-cell *matCellDef="let c">
-            ${{ c.totalMonedero | number:'1.2-2' }}
+            {{ c.totalMonedero | currency }}
         </td>
     </ng-container>
 
