--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -165,6 +165,11 @@
             <span>TOP utilidades<fa-icon [icon]="'sack-dollar'" class="menu-icon"></fa-icon></span>
           </li>
         </ul>
+        <ul *ngIf="expandedSubMenu === 'balance'" class="submenu">
+          <li [routerLink]="'reportes/compras-ventas'" routerLinkActive="active" class="submenu-item">
+            <span>Compras vs Ventas<fa-icon [icon]="'sack-dollar'" class="menu-icon"></fa-icon></span>
+          </li>
+        </ul>
 
       </li>
     </ul>
