reporte-ventas-por-farmacia: implementación de columnas farmacia, stockMax, stockMin y existencia; filtro por producto, ordenamiento por existencia.

--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -111,7 +111,7 @@
             <span>Ventas<fa-icon [icon]="'cash-register'" class="menu-icon"></fa-icon></span>
           </li>
           <li [routerLink]="'/reporte/ventas-por-farmacia'" routerLinkActive="active" class="submenu-item">
-            <span>Productos vendidos <fa-icon [icon]="icons.reporteVentas" class="menu-icon"></fa-icon></span>
+            <span>Productos Ventas - Exist  <fa-icon [icon]="icons.reporteVentas" class="menu-icon"></fa-icon></span>
           </li>
           <li [routerLink]="'reporte/ventas-producto'" routerLinkActive="active" class="submenu-item">
             <span>Un sólo producto<fa-icon [icon]="icons.faReceipt" class="menu-icon"></fa-icon></span>
